# facility-intelligence-system

./: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: config.py  database.py  logging_config.py  main.py
backend/app/agent/: __init__.py  config.py  graph.py  nodes.py  prompts.py  tools.py
backend/app/models/: __init__.py  readings.py  sensor.py  zone.py
backend/app/routes/: agent.py  events.py  sensors.py
backend/app/schemas/: __init__.py  events.py  sensor.py
backend/app/services/: __init__.py  _registry.py  baseline_service.py  event_service.py  readings_service.py  sensor_service.py
backend/scripts/: __init__.py  generate_data.py  init_db.py  seed_zones.py  setup_database.py  trace.py
backend/tests/: test_agent.py  test_agent_tools.py  test_events.py  test_health.py  test_sensors.py
data/: facility.db
docs/: prd.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ErrorBoundary.tsx  ViewportGuard.tsx
frontend/src/components/blueprint/: BlueprintView.tsx  SensorMarker.tsx  SensorOverlay.tsx
frontend/src/components/layout/: CanvasTabs.tsx  Topbar.tsx
frontend/src/components/panel/: AssistantPanel.tsx  ChatChart.tsx  ChatMessage.tsx  ChatReport.tsx
frontend/src/components/visualizations/: LiveVisualization.tsx  VisualizationIdeas.tsx  VisualizeView.tsx  ZoneHealthVisualization.tsx  (+1 more)
frontend/src/data/: mockResponses.ts  sensors.ts
frontend/src/hooks/: useLocalStorage.ts  useSensorPositions.ts  useSensors.ts  useVisualizationCache.ts
frontend/src/lib/: api.ts  query-client.ts
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
(+2 files in other folders)
